# Silver-OPCUA-Toolkit

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: Dockerfile  logging_config_uvicorn.json  pyproject.toml  run.py  toolkit.db
backend/app/: main.py
backend/app/api/routes/: connections.py  tags.py  websocket.py
backend/app/core/: config.py  database.py  logging_config.py
backend/app/models/: connection.py  schemas.py
backend/app/opcua/: manager.py
backend/simulator/: server.py
backend/src/: App.tsx
backend/src/pages/: TagBrowserPage.tsx
frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/ui/: dialog.tsx
frontend/src/lib/: api.ts  useSystemStatus.ts  watchlist.tsx
frontend/src/pages/: ConnectionsPage.tsx  MonitorPage.tsx  TagBrowserPage.tsx
