[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.20.0",
    "asyncua==1.1.5",
    "fastapi==0.115.6",
    "httpx==0.27.2",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.32.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.6.9",
]
